# TucanScript-Scenario

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
TucanScript/: BinaryBuilder.cpp  BinaryBuilder.h  Compiler.cpp  Compiler.h  Lexer.cpp  Lexer.h  Utility.h  VirtualMachine.cpp  VirtualMachine.h
TucanScript-Modules/: Coroutines.ts  IO.ts  Math.ts  Memory.ts  Sock.ts  Time.ts  XGUI.ts
TucanScript/BuildUtility/: main.cpp
TucanScript/Runtime/: main.cpp
TucanScript/SystemModules/Coroutines/: Coroutines.cpp  Coroutines.h
TucanScript/SystemModules/GUI/: XGUI.mm
TucanScript/SystemModules/Graphics/: Vulkan.cpp  Vulkan.h
TucanScript/SystemModules/IO/: IO.cpp  IO.h
TucanScript/SystemModules/Math/: Math.cpp  Math.h
TucanScript/SystemModules/Memory/: Memory.cpp  Memory.h
TucanScript/SystemModules/Sockets/: Networking.cpp  Networking.h
TucanScript/SystemModules/Time/: Time.cpp  Time.h
TucanScript/Test/: main.cpp
TucanScript/VkCompiler/Win/: glsl.frag  glsl.vert  vkComp.bat  vklog.txt
TucanScript/VkTest/: main.cpp
